completato article css+html

--- a/index.html
+++ b/index.html
@@ -16,10 +16,33 @@
     <!-- creazione main -->
     <main>
 
-        <!-- titolo scrittore e data pubblicazione pagina -->
-        <section>
+        <!-- titolo e scrittore e data pubblicazione pagina -->
+        <article>
             <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
-        </section>
+            <p>
+                <span class="grigio">Scritto da</span>
+                <span class="blu">The booleaner</span>
+            </p>
+
+            <!-- data pubblicazione pagina -->
+            <p>
+                <span class="data">il 10/10/2020</span>
+            </p>
+
+            <!-- immagini -->
+                <img src="img/tim-1.jpg" alt="1">
+                <img src="img/tim-2.jpg" alt="2">
+                <br>
+                <span>Ist Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</span>
+                <br>
+                <span>2nd Photo: Wikimedia, by Paul Clarke</span>
+        </article>
+
+        <!-- testo evidenziato  -->
+         <section>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisi ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum
+zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+         </section>
     </main>
 
     <footer>
