completata parte testo evidenziata html+css

--- a/index.html
+++ b/index.html
@@ -33,15 +33,20 @@
                 <img src="img/tim-1.jpg" alt="1">
                 <img src="img/tim-2.jpg" alt="2">
                 <br>
-                <span>Ist Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</span>
+                <span class="testo-normale">Ist Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</span>
                 <br>
-                <span>2nd Photo: Wikimedia, by Paul Clarke</span>
+                <span class="testo-normale">2nd Photo: Wikimedia, by Paul Clarke</span>
+                <br>
+                <br>
+                <br>
         </article>
 
         <!-- testo evidenziato  -->
          <section>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisi ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum
-zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+            <span class="descrizione-1">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud</span>
+            <span class="evidenziato">exerci tation ullamcorper suscipit lobortis nisi ut aliquip ex ea commodo consequat.</span>
+            <span class="descrizione-1">Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum
+zzril delenit augue duis dolore te feugait nulla facilisi.</span>
          </section>
     </main>
 
