completata lista disordinata html+css

--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@
             <span class="descrizione-1">Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum
 zzril delenit augue duis dolore te feugait nulla facilisi.</span>
          </section>
+
+         <!-- lista non ordinata -->
+
+         <section>
+            <br>
+            <br>
+            <span class="descrizione-1">&#8226 Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</span>
+            <br>
+            <span class="descrizione-1">&#8226 Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</span>
+            <br>
+            <span class="descrizione-1">&#8226 Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</span>
+         </section>
     </main>
 
     <footer>
