creata tabella html+css

--- a/index.html
+++ b/index.html
@@ -60,6 +60,45 @@ zzril delenit augue duis dolore te feugait nulla facilisi.</span>
             <br>
             <span class="descrizione-1">&#8226 Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</span>
          </section>
+
+         <!-- parte tabella -->
+         <section>
+            <br>
+            <table>
+                <thead>
+                    <tr>
+                        <th class="riga1">Lorem ipsum dolor</th>
+                        <th class="riga1">Lorem ipsum dolor</th>
+                        <th class="riga1">Lorem ipsum dolor</th>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    <tr>
+                        <td class="riga2">Lorem ipsum dolor</td>
+                        <td class="riga2">Lorem ipsum dolor</td>
+                        <td class="riga2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos quo, placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia eveniet expedita a quia modi. Totam saepe quibusdam natus harum.</td>
+                    </tr>
+                </tbody>
+
+                <tbody>
+                    <tr>
+                        <td class="riga3">Lorem ipsum dolor</td>
+                        <td class="riga3">Lorem ipsum dolor</td>
+                        <td class="riga3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos quo, placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia eveniet expedita a quia modi. Totam saepe quibusdam natus harum.</td>
+                    </tr>
+                </tbody>
+
+                <tbody>
+                    <tr>
+                        <td class="riga2">Lorem ipsum dolor</td>
+                        <td class="riga2">Lorem ipsum dolor</td>
+                        <td class="riga2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos quo, placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia eveniet expedita a quia modi. Totam saepe quibusdam natus harum.</td>
+                    </tr>
+                </tbody>
+                <br>
+            </table>
+         </section>
     </main>
 
     <footer>
