--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@ zzril delenit augue duis dolore te feugait nulla facilisi.</span>
          <!-- parte tabella -->
          <section>
             <br>
+            <br>
             <table>
                 <thead>
                     <tr>
@@ -96,8 +97,16 @@ zzril delenit augue duis dolore te feugait nulla facilisi.</span>
                         <td class="riga2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos quo, placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia eveniet expedita a quia modi. Totam saepe quibusdam natus harum.</td>
                     </tr>
                 </tbody>
-                <br>
             </table>
+         </section>
+
+         <!-- parte evidenziata 2  -->
+         <section>
+            <br>
+            <br>
+            <span class="descrizione-1">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisi ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel </span>
+            <span class="evidenziato">vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto</span>
+            <span class="descrizione-1">odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</span>
          </section>
     </main>
 
