creato footer html + css

--- a/index.html
+++ b/index.html
@@ -110,9 +110,18 @@ zzril delenit augue duis dolore te feugait nulla facilisi.</span>
          </section>
     </main>
 
+    <!-- creazione footer -->
     <footer>
-
+        <h4>Potrebbero interessarti</h4>
+        <div>
+            <img class="monitor" src="img/monitor.jpg" alt="monitor">
+            <div class="testo-immagine1">Lorem ipsum dolor</div>
+            <br>
+            <br>
+            <img class="grafico" src="img/graph.jpg" alt="grafico">
+            <div class="testo-immagine2">Lorem ipsum dolor</div>
+        </div>
+        <br>
     </footer>
-
 </body>
 </html>
